Fix scrolling getting stuck in some occasions when viewing markdown files.

--- a/core/App.css
+++ b/core/App.css
@@ -2058,7 +2058,7 @@ html[data-codiff-platform='darwin'] .sidebar {
   box-shadow: none !important;
 }
 
-.codiff-file-header.selected {
+.codiff-selected-item .codiff-file-header {
   box-shadow:
     inset 0 -1px 0 var(--file-border),
     inset 0 0 0 1px rgb(61 135 245 / 0.52);
@@ -2072,7 +2072,7 @@ html[data-codiff-platform='darwin'] .sidebar {
   corner-shape: squircle;
 }
 
-.codiff-file-header.collapsed.selected {
+.codiff-selected-item .codiff-file-header.collapsed {
   box-shadow: inset 0 0 0 1px rgb(61 135 245 / 0.52);
 }
 
